# Build-a-Production-Ready-FastAPI-Template

./: .env.example  .gitignore  AGENTS.md  README.md  RULES.md  alembic.ini  coverage.xml  pyproject.toml
alembic/: README  env.py
alembic/versions/: 0001_create_users_table.py
app/: __init__.py  main.py
app/api/: docs.py
app/api/dependencies/: auth.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  admin.py  auth.py  health.py  users.py
app/core/: config.py  constants.py  error_handlers.py  security.py
app/core/exceptions/: __init__.py  auth.py  base.py  users.py
app/core/logging/: __init__.py  config.py  formatters.py  middleware.py
app/db/: base.py  session.py
app/db/models/: __init__.py  user.py
app/schemas/: auth.py  error.py  user.py
app/scripts/: __init__.py  seed_admin.py
app/services/: users.py
tests/: __init__.py  conftest.py  constants.py  test_security_config.py
tests/api/v1/: __init__.py  test_auth.py
tests/logging/: __init__.py  test_logging.py
