[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "fastapi-template"
version = "0.1.0"
description = "A minimal, production-ready FastAPI template."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "alembic>=1.14,<2.0",
  "asyncpg>=0.30,<1.0",
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "pwdlib[argon2]>=0.2,<1.0",
  "PyJWT>=2.9,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20,<1.0",
  "httpx>=0.27,<1.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0,<7.0",
  "ruff>=0.7,<1.0",
]

[project.scripts]
seed-admin = "app.scripts.seed_admin:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing --cov-report=xml --cov-fail-under=70"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
  "app/__init__.py",
  "app/scripts/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]
